# causal-armor-test-harness

./: .env.example  .gitignore  CLAUDE.md  README.md  causal_armor.toml  pyproject.toml
notebooks/: benchmark_analysis.ipynb
scripts/: check_runs.sh  plot_results.py  start_vllm.sh
src/agentdojo_native/: __init__.py  __main__.py  _fake_pipeline.py  adapters.py  classify.py  metrics.py  pipeline_element.py  run_benchmark.py  tool_declarations.py
src/harness/: __init__.py  _fake_pipeline.py  bridge.py  classify.py  cli.py  metrics.py  report.py  runner.py
